what git are we using?

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ matrix:
     osx_image: xcode7
     rvm: default
     env: QUEUE=macstadium6 IMAGE=xcode7
+before_script: git --version
 script: bundle exec chirp scripts
 after_script: bundle exec chirp sendstats 2>/dev/null
 after_failure: bundle exec chirp dumplogs
